correct cursor bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ border: 3px solid black;
 @media screen and (max-width: 700px) {
     #cursor_custom
     {
-        display: hidden;
+        display: hidden !important;
     }
 }
 
